--- a/index.html
+++ b/index.html
@@ -3,42 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="temp.css">
     <title>Temperature Converter App</title>
 </head>
 <body>
-    <div class="container">
-        <h1>Temperature Converter</h1>
-        <p>Get value of your desired temperature unit</p>
-        <select>
-            <option selected>Choose your preferred temperature unit</option>
-            <option>Celcuis</option>
-            <option>Fahrenheit</option>
-            <option>Kelvin</option>
-        </select>
-        <form>
-            <input type="number" placeholder="Enter requirred value">
-        </form>
-        <button>Convert</button>
-    </div>
+    <main>
+        <div class="container">
+            <div class="temp-container">
+                <h1>TEMPERATURE CONVERTER</h1>
+                <p>Get value of your desired temperature unit</p>
+                <hr/>
+                
+                <div class="temp-value">
+                    <form>
+                        <input type="number" placeholder="Enter requirred value" class="temp-input" id="tempInput">
+                    </form>
 
-    <div class="temp-grid">
-        <div class="row">
-            <div class="col sm-3">
-                Celcuis Value
-                <ul><li>20C</li></ul>
+                    <select class="temp-option" id="tempOption">
+                        <option selected>Select your preferred temperature unit</option>
+                        <option>Celsius</option>
+                        <option>Fahrenheit</option>
+                        <option>Kelvin</option>
+                    </select>
+                </div>
+
+                <p class="displayResult">Tap the page to display result ... </p>
+
+                <div class="temp-grid">
+                    <div class="col">
+                            Celsius Value °C
+                            <p class="temp-unit" id="celsius"></p>
+                        </div>
+                        <div class="col">
+                            Fahrenheit Value °F
+                            <p class="temp-unit" id="fahrenheit"></p>
+                        </div>
+                        <div class="col">
+                            Kelvin Value °K
+                            <p class="temp-unit" id="kelvin"></p>
+                        </div>
+                </div>
+
+                <!--<div class="temp-grid">
+                    <div class="row">
+                        <div class="col sm-3">
+                            Celsius Value °C
+                            <p class="temp-unit" id="celsius"></p>
+                        </div>
+                        <div class="col sm-3">
+                            Fahrenheit Value °F
+                            <p class="temp-unit" id="fahrenheit"></p>
+                        </div>
+                        <div class="col sm-3">
+                            Kelvin Value °K
+                            <p class="temp-unit" id="kelvin"></p>
+                        </div>
+                    </div>
+                </div> -->
             </div>
-            <div class="col sm-3">
-                Fahrenheit Value
-                <ul><li>20F</li></ul>
-            </div>
-            <div class="col sm-3">
-                Kelvin Value
-                <ul><li>20K</li></ul>
-            </div>
-        </div>
-    </div>
+        </div>    
+    </main>
+   
+    <script src="index.js"></script>
 </body>
 </html>
